2001-09-16  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-show-window): Emergency fix - I left out a
	'select-frame'. 
	(eicq-disconnect): Emergency fix - Uncomment something I'd
	commented out for debugging purposes.
	(eicq-do-kicked-out): Test for 'eicq-user-password', don't attempt
	auto-reconnect if it's nil.

2001-09-15  Steve Youngs  <youngs@xemacs.org>

	* Version 0.2.16 released.

	* README: Add comments about EicqWharf and starting Eicq in a new
	frame. 

	* eicq.el (eicq-save-log-on-exit-p): New.
	(eicq-disconnect): Use 'eicq-save-log-on-exit-p'.  And don't
	prompt to save the buffer, just kill it.
	(eicq-disconnect): Only delete the wharf frame if it's loaded.
	(eicq-show-window): Create the wharf frame after all the other
	Eicq buffers have been created, and then only if it's needed.
	(eicq-do-meta-user-general): A little nicer output.

2001-09-13  Steve Youngs  <youngs@xemacs.org>

	* eicq.el: Autoload 'eicq-wharf-new-frame' to kill off a
	byte-compile warning.
	(eicq-idle-reply): Set 'eicq-auto-reply-p' so we
	auto-online when we should.

2001-09-11  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-auto-reply): Use a modified subset of
	'eicq-send-message-helper' so the outgoing message doesn't get
	logged.  Instead use 'eicq-log-system "Automatic response sent."'
	(eicq-idle-reply): Ditto.

2001-09-07  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-do-kicked-out): Attempt auto-reconnect.

2001-09-02  Steve Youngs  <youngs@xemacs.org>

	* eicq-report.el: Require 'message. 

	* eicq.el (eicq-face-online): Remove background colour to make it
	look better for light backgrounds.
	(eicq-face-away): Ditto.
	(eicq-face-occ): Ditto.
	(eicq-face-dnd): Ditto.
	(eicq-face-ffc): Ditto.
	(eicq-face-na): Ditto.
	(eicq-face-offline): Ditto.
	(eicq-face-log-unread): Ditto.
	(eicq-face-log-read): Ditto.
	(eicq-auto-response-messages-p): New.
	(eicq-do-message-helper): Use 'eicq-auto-response-messages-p'.
